# XGML

./: README.md  WHEREISIT.md  pyproject.toml
parse/: xgmlparse.py
test/: layers.xgml  main.xgml
test_outs/: layers.gcode
