[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xgml"
version = "1.0.0"
authors = [
  { name="stefand-0", email="stefandragan95@gmail.com" },
]
description = "Extensible G-Code Markup Language Transpiler"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]

[project.scripts]
xgml = "xgmlparse:main"
