[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xgml"
version = "15.0.0"
authors = [
  { name="stefand-0", email="stefandragan95@gmail.com" },
]
description = "Extensible G-Code Markup Language Transpiler"
readme = "README.md"
requires-python = ">=3.7"
license = "Apache-2.0"
classifiers = [
    "Programming Language :: Python :: 3",
]

[project.scripts]
xgml = "xgmlparse:main"

[tool.setuptools]
package-dir = {"" = "parse"}
py-modules = ["xgmlparse"]
